@@ -31,6 +31,7 @@ Bugs fixed:
 - 2779859 HOST defaults to "localhost" in XML output of OBJECTPATH
 - 2780126 EnumerateClassNames with ClassName=NULL gets error
 - 2778276 ClassProvider exiting by CreateClass
+- 2784240 Possible array access overflow in cimXmlParser
 
 Changes in 1.3.3
 ================
